--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
     <footer id="contacto">
         <!-- Información de contacto -->
-        <a target="_blank" href="https://github.com/diegoalavarez">Desarrolado por</a>
+        <a target="_blank" href="https://github.com/diegoalavarez">Desarrolado por Diego Alvarez Dev.</a>
     </footer>
 
     <script src="JavaScript/index.js"></script> <!-- Enlace al archivo JavaScript -->
